# osproject

./: CMakeLists.txt  README.md
src/: generator.cpp  generator.hpp  input.cpp  input.hpp  main.cpp  process.hpp  schedulers.cpp  simulator.cpp  simulator.hpp
src/paging/: fakemain.cpp  fakemain.h  fakemain.hpp  page_algorithms.cpp  page_algorithms.hpp  paging_main.hpp  simulator.cpp  simulator.hpp
src/schduling/: generator.cpp  generator.hpp  schedulers.cpp  schedulers.hpp  simulator.cpp  simulator.hpp
src/scheduling/: process.hpp  schedulers.cpp  schedulers.hpp  simulator.cpp  simulator.hpp
